tests/rosetta/transpiler/Racket/bitwise-io-2.error
run error: exit status 1
/workspace/mochi/tests/rosetta/transpiler/Racket/bitwise-io-2.rkt:215:13: indexOf: unbound identifier
  in: indexOf
  location...:
   /workspace/mochi/tests/rosetta/transpiler/Racket/bitwise-io-2.rkt:215:13
